--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,7 @@
-<!--BigBlueButton open source conferencing system - http://www.bigbluebutton.org/.-->
-
-<!--Copyright (c) 2022 BigBlueButton Inc. and by respective authors (see below).-->
-
-<!--This program is free software; you can redistribute it and/or modify it under the-->
-<!--terms of the GNU Lesser General Public License as published by the Free Software-->
-<!--Foundation; either version 3.0 of the License, or (at your option) any later-->
-<!--version.-->
-
-<!--Greenlight is distributed in the hope that it will be useful, but WITHOUT ANY-->
-<!--WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A-->
-<!--PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.-->
-
-<!--You should have received a copy of the GNU Lesser General Public License along-->
-<!--with Greenlight; if not, see <http://www.gnu.org/licenses/>.-->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BigBlueButton</title>
+    <title>蚂蚁聚合路由器会议系统</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- Open Graph Attributes -->
     <meta property="og:title" content="<%= page_title %>" />
